fix: remove "scroll to top" button background note: cant be themed, js-based color transition

--- a/styles/codeforces/catppuccin.user.less
+++ b/styles/codeforces/catppuccin.user.less
@@ -453,6 +453,10 @@
       border-top-color: @surface2;
     }
 
+    .button-up {
+      background-color: transparent !important;
+    }
+
     // https://github.com/bajrangCoder/acode-catppuccin
     .ace_editor {
       color: @text;
