fix: theme gray text

--- a/styles/codeforces/catppuccin.user.less
+++ b/styles/codeforces/catppuccin.user.less
@@ -142,6 +142,7 @@
     .cell-rejected,
     .unsuccessfulChallengeCount,
     [style*="color:#888"],
+    [style*="color: #777"],
     label.show-archived,
     .small,
     small {
@@ -197,8 +198,8 @@
     .user-violet {
       color: @lavender !important;
     }
-    .user-gray {
-      color: @overlay2 !important;
+    .user-gray, [style*="color:gray"] {
+      color: @subtext0 !important;
     }
 
     del[style*="background:#ff8080"] {
