feat(scalar): home & dashboard pages, syntax highlighting, primary buttons, logo and misc

--- a/styles/scalar/catppuccin.user.less
+++ b/styles/scalar/catppuccin.user.less
@@ -17,7 +17,12 @@
 
 @import "https://userstyles.catppuccin.com/lib/lib.less";
 
-@-moz-document domain("apidocumentation.com"), domain("client.scalar.com") {
+@-moz-document domain("scalar.com") {
+  @import url("https://unpkg.com/@catppuccin/highlightjs@1.0.0/css/catppuccin-variables.important.css");
+  code.hljs {
+    background: none !important;
+  }
+  
   .dark-mode {
     #catppuccin(@darkFlavor);
   }
@@ -28,6 +33,7 @@
   #catppuccin(@flavor) {
     #lib.palette();
     #lib.defaults();
+    #lib.css-variables();
 
     --scalar-color-1: @text;
     --scalar-color-2: @subtext1;
@@ -45,6 +51,9 @@
     --scalar-color-orange: @peach;
     --scalar-color-purple: @lavender;
     --scalar-selection-1: fade(@accent, 30%);
+    --scalar-button-1: @accent;
+    --scalar-button-1-hover: darken(@accent, 5%);
+    --scalar-button-1-color: @base;
 
     background-color: @base;
 
@@ -55,20 +64,13 @@
       --scalar-sidebar-color-active: @accent;
     }
 
-    .scalar-address-bar * > .scalar-button, .show-api-client-button {
-      background-color: @accent;
-      color: @base;
-      .text-c-1 {
-        color: @base;
-      }
+    .text-white {
+      color: @base; // danger (delete) button text
     }
 
-    .scalar-app .brightness-lifted {
-      filter: none;
-    }
-
-    #headlessui-disclosure-button-v-10 {
-      color: @text;
+    // https://scalar.com/
+    .logo {
+      filter: @text-filter;
     }
   }
 }
