fix(scalar): add brightness lifted filter override back
Whoops, found it now.

--- a/styles/scalar/catppuccin.user.less
+++ b/styles/scalar/catppuccin.user.less
@@ -64,6 +64,10 @@
       --scalar-sidebar-color-active: @accent;
     }
 
+    .brightness-lifted {
+      filter: none; // remove elevated filter on dropdown modal backgrounds
+    }
+
     .text-white {
       color: @base; // danger (delete) button text
     }
