fix(scalar): set color purple to mauve instead of lavender

--- a/styles/scalar/catppuccin.user.less
+++ b/styles/scalar/catppuccin.user.less
@@ -49,7 +49,7 @@
     --scalar-color-yellow: @yellow;
     --scalar-color-blue: @blue;
     --scalar-color-orange: @peach;
-    --scalar-color-purple: @lavender;
+    --scalar-color-purple: @mauve;
     --scalar-selection-1: fade(@accent, 30%);
     --scalar-button-1: @accent;
     --scalar-button-1-hover: darken(@accent, 5%);
