fix(scalar): use base/surface bg scale over base/mantle/crust

--- a/styles/scalar/catppuccin.user.less
+++ b/styles/scalar/catppuccin.user.less
@@ -23,13 +23,14 @@
     background: none !important;
   }
   
-  .dark-mode {
-    #catppuccin(@darkFlavor);
-  }
   .light-mode {
     #catppuccin(@lightFlavor);
   }
 
+  .dark-mode {
+    #catppuccin(@darkFlavor);
+  }
+  
   #catppuccin(@flavor) {
     #lib.palette();
     #lib.defaults();
@@ -40,8 +41,8 @@
     --scalar-color-3: @subtext0;
     --scalar-color-accent: @accent;
     --scalar-background-1: @base;
-    --scalar-background-2: @mantle;
-    --scalar-background-3: @crust;
+    --scalar-background-2: @surface0;
+    --scalar-background-3: @surface1;
     --scalar-background-accent: fade(@accent, 12%);
     --scalar-border-color: @surface1;
     --scalar-color-green: @green;
@@ -64,6 +65,10 @@
       --scalar-sidebar-color-active: @accent;
     }
 
+    .scalar-code-block, .t-editor__code {
+      background-color: @mantle;
+    }
+    
     .brightness-lifted {
       filter: none; // remove elevated filter on dropdown modal backgrounds
     }
