Fix some final stuff, still not finished though. Stash.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/git-scm/catppuccin.user.less
+++ b/styles/git-scm/catppuccin.user.less
@@ -305,7 +305,19 @@
         content: url("data:image/svg+xml,@{svg}") !important;
       }
 
-      &[href="/downloads/guis"] img {}
+      &[href="/downloads/guis"] img {
+        @svg: escape(
+          '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" fill="@{accent}"><path d="M297.4 598.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9S460.9 416 448 416h-64V80c0-26.5-21.5-48-48-48h-32c-26.5 0-48 21.5-48 48v336h-64c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 7 34.8z"/></svg>'
+        );
+        content: url("data:image/svg+xml,@{svg}") !important;
+      }
+
+      &[href="/community"] img {
+        @svg: escape(
+          '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" fill="@{accent}"><path d="M108.2 322.7c6.1-15.2 4-32.6-5.6-45.9C88.1 256.7 80 233.1 80 208c0-66.8 60.5-128 144-128s144 61.2 144 128-60.5 128-144 128c-15.9 0-31.1-2.3-45.3-6.5-10.3-3.1-21.4-2.5-31.4 1.5l-50.4 20.2 11.4-28.5zM32 208c0 35.8 11.6 69.1 31.7 96.8l-29.8 74.4c-1.3 3.2-1.9 6.6-1.9 10C32 404 44 416 58.8 416c3.4 0 6.8-.7 10-1.9l96.3-38.5c18.6 5.5 38.4 8.4 58.9 8.4 106 0 192-78.8 192-176S330 32 224 32 32 110.8 32 208m384 368c20.6 0 40.3-3 58.9-8.4l96.3 38.5c3.2 1.3 6.6 1.9 10 1.9 14.8 0 26.8-12 26.8-26.8 0-3.4-.7-6.8-1.9-10l-29.7-74.4c20-27.8 31.7-61.1 31.7-96.8 0-82.4-61.7-151.5-145-170.7-1.6 16.3-5.1 31.9-10.1 46.9 63.9 14.8 107.2 67.3 107.2 123.9 0 25.1-8.1 48.7-22.6 68.8-9.6 13.3-11.7 30.6-5.6 45.9l11.4 28.5-50.4-20.2c-10-4-21.1-4.5-31.4-1.5-14.2 4.2-29.4 6.5-45.3 6.5-72.2 0-127.1-45.7-140.7-101.2-15.6 3.2-31.7 5-48.1 5.2 16.4 81.9 94.7 144 188.8 144z"/></svg>'
+        );
+        content: url("data:image/svg+xml,@{svg}") !important;
+      }
     }
 
     #front-downloads {
@@ -428,81 +440,65 @@
         border-color: var(--pre-border) !important;
       }
 
-      div[data-type="note"],
-      div[data-type="warning"] {
-        border-color: var(--pre-border) !important;
+      div {
+        &[data-type="note"] {
+          border-color: @peach !important;
 
-        h1 {
-          color: @peach !important;
+          h1 {
+            color: @accent !important;
+          }
+        }
+
+        &[data-type="warning"] {
+          border-color: @red !important;
+
+          h1 {
+            color: @peach !important;
+          }
+        }
+
+        &[data-type="example"] h5 {
+          border-color: @teal !important;
+        }
+
+        &.navbar {
+          background-color: var(--sidebar-bg-color) !important;
+          border-color: var(--pre-border) !important;
+
+          h1, p a {
+            color: var(--font-color) !important;
+          }
         }
       }
     }
 
-    .edition2 div[data-type="example"] h5 {
-      border-bottom: 1px solid #d8d8d8 !important;
-    }
-
-    .edition2 div.navbar {
-      background-color: #e8e8e8 !important;
-      border-bottom: 1px solid #d8d8d8 !important;
-    }
-
-    .edition2 div.navbar h1 {
-      color: #999 !important;
-    }
-
-    .edition2 div.navbar p a {
-      color: #999 !important;
-    }
-
     @media screen and (max-width: 480px) {
       .edition2 div.navbar {
-        border-bottom: 2px solid #e8e8e8 !important;
+        border-color: var(--pre-border) !important;
         box-shadow: var(--shadow-color) !important;
       }
     }
 
-    ul.books-list li img {
-      border: solid 1px #b7b7b7 !important;
-    }
-
-    .bar-chart dd + dd {
-      border-left: 1px solid #ccc !important;
+    ul.books-list li img, .bar-chart dd + dd {
+      border-color: var(--pre-border) !important;
     }
 
     .bar-chart progress.git::-moz-progress-bar,
-    .bar-chart progress.git::-webkit-progress-value {
-      background-color: darken(@accent, 10%) !important;
-    }
-
+    .bar-chart progress.git::-webkit-progress-value,
     .bar-chart progress.svn::-moz-progress-bar,
     .bar-chart progress.svn::-webkit-progress-value {
       background-color: @accent !important;
     }
 
     div#masthead {
-      background: 0 0 !important;
-    }
+      background-color: @mantle !important;
 
-    div#masthead::before {
-      content: "" !important;
-      width: 100% !important;
-      height: 295px !important;
-      background: url("https://git-scm.com//images/bg/isometric-grid.png") 100%
-        0 repeat !important;
-      background-size: 35px 21px !important;
-      position: absolute !important;
-      filter: brightness(0.4)contrast(1.6) !important;
-      z-index: -1 !important;
-    }
+      &::before {
+        filter: @mantle-filter !important;
+      }
 
-    @media only screen and (min-device-pixel-ratio: 2),
-      only screen and (min-device-pixel-ratio: 2),
-      only screen and (min-device-pixel-ratio: 2/1) {
-      div#masthead::before {
-        background: url("https://git-scm.com//images/bg/isometric-grid@2x.png")
-          100% 0 repeat !important;
-        background-size: 35px 21px !important;
+      .illustration-wrapper img.illustration {
+        filter: @accent-filter !important;
       }
     }
 
