Fix, maybe final. Remove redundant comments. extra variables for https://git-scm.com/tools/hosting fix masthead fix media-root snippets
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/git-scm/catppuccin.user.less
+++ b/styles/git-scm/catppuccin.user.less
@@ -19,15 +19,13 @@
 @import url("https://python.catppuccin.com/pygments/catppuccin-variables.important.css");
 
 @-moz-document domain("git-scm.com") {
-  :root:is(
-    :is([data-theme="light"]),
-    :not([data-theme="light"])
-  ) {
-    @media (prefers-color-scheme: dark) {
+  @media screen and (prefers-color-scheme: dark),
+    screen and (prefers-color-scheme: light) {
+    :root[data-theme="dark"], :root:not([data-theme="light"]) {
       #catppuccin(@darkFlavor);
     }
 
-    @media (prefers-color-scheme: light) {
+    :root[data-theme="light"] {
       #catppuccin(@lightFlavor);
     }
   }
@@ -46,7 +44,6 @@
     --light-font-color-darker-10: @text;
     --light-font-color-darker-25: @base;
     --light-font-color-darker-35: @text;
-    // ? Is this...used??? Might be specific webpage. Theme it just for redundancy.
     --light-font-color-darker-55: darken(@subtext0, 55%);
     --light-font-color-lighter-20: lighten(@subtext0, 20%);
     --link-color: @blue;
@@ -91,9 +88,12 @@
     --search-border: @overlay0;
     --search-focus-border: @accent;
     --logos-1: @accent;
-    --logos-2: darken(@accent, 5%);
-    --logos-3: darken(@accent, 10%);
-    --logos-4: darken(@accent, 15%);
+    --logos-2: darken(@accent, 10%);
+    --logos-3: darken(@accent, 20%);
+    --logos-4: @accent;
+    --logos-5: darken(@accent, 25%);
+    --logos-6: darken(@accent, 30%);
+    --logos-7: lighten(@accent, 5%);
 
     img[alt="Git"] {
       filter: @accent-filter !important;
@@ -492,14 +492,6 @@
 
     div#masthead {
       background-color: @mantle !important;
-
-      &::before {
-        filter: @mantle-filter !important;
-      }
-
-      .illustration-wrapper img.illustration {
-        filter: @accent-filter !important;
-      }
     }
 
     hr.sidebar {
@@ -552,6 +544,68 @@
 
         &:hover {
           filter: none !important;
+        }
+      }
+    }
+
+    #companies-projects > ul > li > a {
+      &[href="https://azure.microsoft.com/en-us/products/devops/repos/"]
+        svg
+        path {
+        &#path1 {
+          fill: var(--logos-6) !important;
+        }
+
+        &#path2 {
+          fill: var(--logos-5) !important;
+        }
+
+        &#path4, &#path5 {
+          fill: var(--logos-2) !important;
+        }
+
+        &#path6 {
+          fill: var(--logos-1) !important;
+        }
+      }
+
+      &[href="https://codeberg.org"] svg {
+        defs#defs1 lineargradient#linearGradient6924 stop#stop6920 {
+          stop-color: var(--bg-color) !important;
+        }
+
+        path#path6733 {
+          fill: url("#linearGradient6924") !important;
+        }
+      }
+
+      &[href="https://www.gerritcodereview.com"] svg {
+        path {
+          &#path3024, &#path3303, &#path3305, &#path3307, &#path4130 {
+            fill: var(--logos-7) !important;
+          }
+        }
+
+        circle#path3026 {
+          fill: var(--bg-color) !important;
+        }
+      }
+
+      &[href="https://radicle.xyz"] svg path {
+        &[fill="#3333dd"] {
+          fill: var(--logos-2) !important;
+        }
+
+        &[fill="#f4f4f4"] {
+          fill: var(--logos-1) !important;
+        }
+
+        &[fill="#ff55ff"] {
+          fill: var(--bg-color) !important;
+        }
+
+        &[fill="#5555ff"] {
+          fill: var(--logos-3) !important;
         }
       }
     }
