Fix lints, fix fmt.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/git-scm/catppuccin.user.less
+++ b/styles/git-scm/catppuccin.user.less
@@ -322,7 +322,7 @@
 
     #front-downloads {
       .downloads-box {
-        outline: var(--base-border-color) !important;
+        outline-color: var(--base-border-color) !important;
 
         &::before {
           filter: @accent-filter !important;
@@ -359,7 +359,7 @@
     @media (max-width: 940px) {
       .sidebar-btn:focus + .sidebar,
       .sidebar:focus-within {
-        border: var(--main-border) !important;
+        border-color: var(--main-border) !important;
         box-shadow: var(--shadow-color) !important;
       }
     }
@@ -507,14 +507,6 @@
       background: var(--bg-color) !important;
     }
 
-    #l10n-versions-dropdown footer a {
-      color: var(--link-color) !important;
-
-      &:hover {
-        color: var(--link-hover-color) !important;
-      }
-    }
-
     .diff {
       img[src="/images/icons/green-dot.png"] {
         filter: @green-filter !important;
@@ -612,7 +604,7 @@
 
     img[src="/images/light-mode.svg"] {
       @svg: escape(
-        '<svg width="50" height="50" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg"><circle style="fill:none;stroke:@{accent};stroke-width:4" cx="25" cy="25" r="10"/><path style="fill:none;stroke:@{accent};stroke-width:4;stroke-linecap:round;stroke-linejoin:round" d="M25 5v5m0 35v-5m20-15h-5M5 25h5m29-14-3.5 3.5M11 39l3.5-3.5M39 39l-3.5-3.5M11 11l3.5 3.5"/></svg>'
+        '<svg width="50" height="50" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg"><circle cx="25" cy="25" r="10" fill="none" stroke="@{accent}" stroke-width="4"/><path d="M25 5v5m0 35v-5m20-15h-5M5 25h5m29-14-3.5 3.5M11 39l3.5-3.5M39 39l-3.5-3.5M11 11l3.5 3.5" fill="none" stroke="@{accent}" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></svg>'
       );
       content: url("data:image/svg+xml,@{svg}") !important;
       filter: none !important;
