Reddit fix - highlighting for notifs.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/reddit/catppuccin.user.less
+++ b/styles/reddit/catppuccin.user.less
@@ -51,11 +51,22 @@
     --color-neutral-content-strong: @text !important;
     --color-global-white: @crust !important;
     --color-neutral-background: @base !important;
-    --color-neutral-background-selected: @surface0 !important;
+    --color-neutral-background-hover: @surface0 !important;
+    --color-neutral-background-selected: @surface1 !important;
     --color-neutral-background-weak: @mantle !important;
+    --color-neutral-background-weak-hover: fade(@accent, 50%);
     --color-neutral-background-medium: @base !important;
     --color-neutral-background-strong: @crust !important;
-    --color-neutral-background-hover: @surface0 !important;
+    --color-neutral-background-strong-hover: fade(@accent, 90%);
+    --color-neutral-background-gilded: fade(@accent, 30%);
+    --color-neutral-background-gilded-hover: fade(@accent, 60%);
+    --color-neutral-background-highlighted: fade(@peach, 30%);
+    --color-neutral-background-highlighted-strong: fade(@peach, 60%);
+    --color-neutral-background-pinned: fade(@accent, 80%);
+    --color-neutral-background-container: @surface0;
+    --color-neutral-background-container-hover: @surface1;
+    --color-neutral-background-container-strong: @surface1;
+    --color-neutral-background-container-strong-hover: @surface2;
     --color-neutral-border: @surface0 !important;
     --color-neutral-border-medium: @surface0 !important;
     --color-neutral-border-weak: @surface0 !important;
@@ -127,6 +138,99 @@
     --color-action-upvote: @accent !important;
     --color-action-downvote: @blue;
     --color-banner-error-text: @base !important;
+
+    // --color-ai-background-weaker: #00382b;
+    // --color-ai-plain: #01a484;
+    // --color-ai-plain-hover: #00c29d;
+    // --color-caution-background: #d8a100;
+    // --color-caution-background-hover: #ffbf0b;
+    // --color-caution-onBackground: #000;
+    // --color-caution-plain: #ffbf0b;
+    // --color-caution-plain-hover: #ffe284;
+    // --color-danger-plain: #ff8773;
+    // --color-danger-plain-hover: #fdb3a4;
+    // --color-downvote-onStrongScrim: #b29fff;
+    // --color-downvote-onStrongScrim-disabled: rgba(178, 159, 255, 0.3);
+    // --color-downvote-onStrongScrim-weaker: #9580ff;
+    // --color-downvote-plain: #9580ff;
+    // --color-downvote-plain-disabled: rgba(149, 128, 255, 0.3);
+    // --color-downvote-plain-weaker: #6a5cff;
+    // --color-elevation-large1: #0000007f;
+    // --color-elevation-large2: #0003;
+    // --color-elevation-medium1: #0000007f;
+    // --color-elevation-medium2: #0003;
+    // --color-elevation-small: #00000054;
+    // --color-elevation-xsmall: #000a;
+    // --color-global-admin: #d93900;
+    // --color-global-black: #000;
+    // --color-global-gold: #d8a100;
+    // --color-global-moderator: #008a10;
+    // --color-global-nsfw: #de019f;
+    // --color-global-offline: #667780;
+    // --color-global-online: #00c61c;
+    // --color-global-stars: #d8a100;
+    // --color-interactive-focused: #007fae;
+    // --color-inverted-interactive-background-disabled: #0000000c;
+    // --color-inverted-interactive-content-disabled: #0000003f;
+    // --color-inverted-interactive-pressed: #00000026;
+    // --color-inverted-neutral-background: #fff;
+    // --color-inverted-neutral-background-hover: #f6f8f9;
+    // --color-inverted-neutral-border: #0003;
+    // --color-inverted-neutral-content: #333d42;
+    // --color-inverted-neutral-content-strong: #181c1f;
+    // --color-inverted-secondary-background: #e5ebee;
+    // --color-inverted-secondary-background-hover: #dbe4e9;
+    // --color-inverted-secondary-background-selected: #c9d7de;
+    // --color-inverted-secondary-onBackground: #000;
+    // --color-inverted-secondary-plain: #181c1f;
+    // --color-inverted-secondary-plain-hover: #000;
+    // --color-media-background: rgba(0, 0, 0, 0.6);
+    // --color-media-background-hover: rgba(0, 0, 0, 0.8);
+    // --color-media-background-selected: rgba(0, 0, 0, 0.8);
+    // --color-media-border-selected: #fff;
+    // --color-media-border-weak: #ffffff19;
+    // --color-media-onBackground: #fff;
+    // --color-media-onBackground-disabled: #ffffff3f;
+    // --color-media-onBackground-weak: @surface0;
+    // --color-offline: #767676;
+    // --color-primary-border: #648efc;
+    // --color-primary-border-hover: #90a9fd;
+    // --color-primary-plain: #648efc;
+    // --color-primary-plain-hover: #90a9fd;
+    // --color-primary-plain-visited: #cf5fff;
+    // --color-primarynext-background: #eef1f3;
+    // --color-primarynext-background-hover: #fff;
+    // --color-primarynext-onBackground: #000;
+    // --color-primarynext-plain: #648efc;
+    // --color-primarynext-plain-hover: #90a9fd;
+    // --color-primarynext-plain-visited: #cf5fff;
+    // --color-scrim-background: #0009;
+    // --color-scrim-background-strong: #000c;
+    // --color-success-plain: #00c61c;
+    // --color-success-plain-hover: #58e15b;
+    // --color-ui-canvas: #080808;
+    // --color-ui-modalbackground: var(--color-neutral-background-strong);
+    // --color-upvote-content-weak: var(--color-global-brand-orangered);
+    // --color-upvote-onStrongScrim: #ff895d;
+    // --color-upvote-onStrongScrim-disabled: rgba(255, 137, 93, 0.3);
+    // --color-upvote-onStrongScrim-weaker: #ff4500;
+    // --color-upvote-plain: #ff895d;
+    // --color-upvote-plain-disabled: rgba(255, 137, 93, 0.3);
+    // --color-upvote-plain-weaker: #ff4500;
+    // --color-button-primary-border-activated: transparent;
+    // --color-button-plain-inverted-activated-text: var(
+    //   --color-neutral-background
+    // );
+    // --color-input-radio-hover: var(--color-secondary-plain);
+    // --color-shimmer-background: #ffffff08;
+    // --color-shimmer-gradient-overlay: linear-gradient(
+    //   to right,
+    //   #fff0,
+    //   #ffffff05 20%,
+    //   #ffffff0f 50%,
+    //   #ffffff08 70%,
+    //   #fff0 100%
+    // );
 
     --shreddit-color-wordmark: @accent;
     #reddit-logo {
