fix(npm): security update alert banner

--- a/styles/npm/catppuccin.user.less
+++ b/styles/npm/catppuccin.user.less
@@ -53,6 +53,7 @@
     --color-fg-accent: @blue;
     --color-fg-success: @green;
     --color-fg-attention: @yellow;
+    --color-bg-attention: mix(@yellow, @crust, 65%);
     --color-fg-danger: @red;
     --color-border-strong: @surface0;
 
