Some changes, need to finish.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/wikipedia/catppuccin.user.less
+++ b/styles/wikipedia/catppuccin.user.less
@@ -17,7 +17,7 @@
 ==/UserStyle== */
 
 @import "https://userstyles.catppuccin.com/lib/lib.less";
-@import "https://userstyles.catppuccin.com/lib/mediawiki.less";
+@import "http://127.0.0.1:8000/catppuccin-styles/userstyles/lib/mediawiki.less";
 
 @-moz-document domain("wikipedia.org"),
   domain("wiktionary.org"),
@@ -71,6 +71,34 @@
     --wikt-palette-dulllightblue: fade(@blue, 40%);
     --wikt-palette-grey: @subtext0;
     --wikt-palette-lightergrey: fade(@subtext0, 40%);
+
+    .sortable:not(.jquery-tablesorter) > * > tr:first-child > th.headerSort,
+    .jquery-tablesorter th.headerSort {
+      @svg: escape("");
+      background-image: url("data:image/svg+xml, @{svg}") !important;
+    }
+
+    .wikitable {
+      tr {
+        > th {
+          background-color: @mantle;
+        }
+
+        > td {
+          &:nth-child(2n+1) {
+            background-color: @surface0;
+          }
+
+          &:nth-child(2n) {
+            background-color: @surface1;
+          }
+
+          &:hover {
+            background-color: @surface2;
+          }
+        }
+      }
+    }
 
     .mw-parser-output {
       /* https://en.wikipedia.org/wiki/Main_Page */
