Fix some new theming in the beta.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/stylus/catppuccin.user.less
+++ b/styles/stylus/catppuccin.user.less
@@ -35,6 +35,7 @@
     --bg: @base;
     --fg: @text;
     --c30: @subtext1;
+    --c35: @subtext0;
     --c40: @overlay0;
     --c45: @surface2;
     --c50: @subtext0;
@@ -181,12 +182,18 @@
     select[disabled] > option {
       color: @subtext0;
     }
-    .applies-to input,
-    .applies-to select {
-      background: @base;
-      border-color: @surface0;
-      color: @subtext0;
+
+    .applies-to {
+      background-color: @mantle;
+
+      input,
+      select {
+        background: @base;
+        border-color: @surface0;
+        color: @subtext0;
+      }
     }
+
     button {
       color: @text !important;
       background: @mantle !important;
