Add cm-searching highlighting.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/stylus/catppuccin.user.less
+++ b/styles/stylus/catppuccin.user.less
@@ -225,6 +225,15 @@
       }
     }
 
+    .find-open .cm-searching {
+      color: @base;
+      background-color: @accent;
+
+      &.search-target-match {
+        background-color: darken(@accent, 15%) !important;
+      }
+    }
+
     .csp-problem-indicator, .regexp-problem-indicator {
       background-color: fade(@red, 30%) !important;
     }
