Add navbox fix, add sidebar fix.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/lib/mediawiki.less
+++ b/lib/mediawiki.less
@@ -47,6 +47,7 @@
     .navbox:not(.notheme),
     .navbox-subgroup:not(.notheme),
     .navbox-group:not(.notheme),
+    .navbox-list:not(.notheme),
     .navbox-even:not(.notheme),
     .navbox-abovebelow:not(.notheme),
     .navbox-title:not(.notheme) {
