Add merge-2 icon.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -1883,6 +1883,14 @@
         content: url("data:image/svg+xml,@{svg}");
         filter: none !important;
       }
+
+			&[src$="Merge-arrows-2.svg"] {
+				@svg: escape(
+          '<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="36" height="40" version="1.0"><defs><linearGradient id="a"><stop offset="0" stop-color="@{blue}"/><stop offset="1" stop-color="@{text}"/></linearGradient><linearGradient id="b"><stop offset="0" stop-color="@{red}"/><stop offset="1" stop-color="@{text}"/></linearGradient><linearGradient xlink:href="#a" id="c" x1="21.91" x2="37.284" y1="14.877" y2="-.496" gradientTransform="matrix(-1 0 0 1 36.047 18.406)" gradientUnits="userSpaceOnUse"/><linearGradient xlink:href="#b" id="d" x1="21.91" x2="37.284" y1="14.877" y2="-.496" gradientUnits="userSpaceOnUse"/></defs><g stroke-width="1.054"><path fill="url(#c)" stroke="@{blue}" d="M14.203 18.656V25h21.281v8.406h-21.28v6.313L.515 29.187z" transform="translate(.906 1.031)scale(.9484)"/><path fill="url(#d)" stroke="@{red}" d="M21.844.25v6.344H.563V15h21.28v6.313L35.532 10.78z" transform="translate(.906 1.031)scale(.9484)"/></g></svg>'
+        );
+        content: url("data:image/svg+xml,@{svg}");
+        filter: none !important;
+			}
     }
   }
 }
