Revert mediawiki location.

--- a/styles/wikipedia/catppuccin.user.less
+++ b/styles/wikipedia/catppuccin.user.less
@@ -17,7 +17,7 @@
 ==/UserStyle== */
 
 @import "https://userstyles.catppuccin.com/lib/lib.less";
-@import "http://127.0.0.1:8000/catppuccin-styles/userstyles/lib/mediawiki.less";
+@import "https://userstyles.catppuccin.com/lib/mediawiki.less";
 
 @-moz-document domain("wikipedia.org"),
   domain("wiktionary.org"),
