Remove silly things, add next and prev.

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -394,33 +394,6 @@
       }
     }
 
-    /* Non-Inverted Icons */
-    :is(:not(.cdx-icon) svg,
-    :not(.skin-invert-image) img,
-    .oo-ui-iconElement-icon:is(
-      .oo-ui-image-progressive,
-      .oo-ui-image-destructive,
-      .oo-ui-checkboxInputWidget-checkIcon,
-      .oo-ui-image-invert,
-      .mw-no-invert
-    ))[src$=".svg"] {
-      filter: @accent-filter;
-    }
-
-    /* Inverted Icons */
-    :is(.cdx-icon svg,
-    .skin-invert-image img,
-    .skin-invert,
-    .oo-ui-iconElement-icon:not(
-      .oo-ui-image-progressive,
-      .oo-ui-image-destructive,
-      .oo-ui-checkboxInputWidget-checkIcon,
-      .oo-ui-image-invert,
-      .mw-no-invert
-    ))[src$=".svg"] {
-      filter: @text-filter;
-    }
-
     #mixins.table();
 
     table.diff {
@@ -1887,6 +1860,22 @@
 			&[src$="Merge-arrows-2.svg"] {
 				@svg: escape(
           '<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="36" height="40" version="1.0"><defs><linearGradient id="a"><stop offset="0" stop-color="@{blue}"/><stop offset="1" stop-color="@{text}"/></linearGradient><linearGradient id="b"><stop offset="0" stop-color="@{red}"/><stop offset="1" stop-color="@{text}"/></linearGradient><linearGradient xlink:href="#a" id="c" x1="21.91" x2="37.284" y1="14.877" y2="-.496" gradientTransform="matrix(-1 0 0 1 36.047 18.406)" gradientUnits="userSpaceOnUse"/><linearGradient xlink:href="#b" id="d" x1="21.91" x2="37.284" y1="14.877" y2="-.496" gradientUnits="userSpaceOnUse"/></defs><g stroke-width="1.054"><path fill="url(#c)" stroke="@{blue}" d="M14.203 18.656V25h21.281v8.406h-21.28v6.313L.515 29.187z" transform="translate(.906 1.031)scale(.9484)"/><path fill="url(#d)" stroke="@{red}" d="M21.844.25v6.344H.563V15h21.28v6.313L35.532 10.78z" transform="translate(.906 1.031)scale(.9484)"/></g></svg>'
+        );
+        content: url("data:image/svg+xml,@{svg}");
+        filter: none !important;
+			}
+
+      &[src$="Tango-go-next.svg"] {
+				@svg: escape(
+          '<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="48" width="48" version="1.0"><defs><radialGradient gradientUnits="userSpaceOnUse" gradientTransform="matrix(2.04673 0 0 1.55761 -19.518 3.452)" r="17.171" fy="2.897" fx="19.701" cy="2.897" cx="19.701" id="f" xlink:href="#a"/><radialGradient gradientUnits="userSpaceOnUse" gradientTransform="matrix(1 0 0 .53672 0 16.873)" r="15.645" fy="36.421" fx="24.837" cy="36.421" cx="24.837" id="d" xlink:href="#b"/><radialGradient xlink:href="#c" id="e" cx="22.292" cy="32.798" fx="22.292" fy="32.798" r="16.956" gradientTransform="matrix(.84302 0 0 1.02017 4.5 1.382)" gradientUnits="userSpaceOnUse"/><linearGradient id="c"><stop offset="0" stop-color="@{teal}"/><stop offset="1" stop-color="@{green}"/></linearGradient><linearGradient id="b"><stop offset="0" stop-color="@{base}" stop-opacity="1"/><stop offset="1" stop-color="@{base}" stop-opacity="0"/></linearGradient><linearGradient id="a"><stop offset="0" stop-color="@{text}" stop-opacity="1"/><stop offset="1" stop-color="@{text}" stop-opacity="0"/></linearGradient></defs><path transform="translate(-8.12 -15.102)scale(1.27119)" d="M40.482 36.421a15.645 8.397 0 1 1-31.29 0 15.645 8.397 0 1 1 31.29 0" style="marker:none" opacity=".29946522" color="@{base}" fill="url(#d)" fill-opacity="1" fill-rule="evenodd" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" marker-start="none" marker-mid="none" marker-end="none" stroke-miterlimit="10" stroke-dasharray="none" stroke-dashoffset="0" stroke-opacity="1" visibility="visible" display="inline" overflow="visible"/><path d="M8.554 15.517v16.995h12.984v8.545l19.96-16.907L21.419 7.125v8.398z" style="marker:none" opacity="1" color="@{base}" fill="url(#e)" fill-opacity="1" fill-rule="evenodd" stroke="@{green}" stroke-width="1.00000036" stroke-linecap="round" stroke-linejoin="round" marker-start="none" marker-mid="none" marker-end="none" stroke-miterlimit="10" stroke-dasharray="none" stroke-dashoffset="0" stroke-opacity="1" visibility="visible" display="inline" overflow="visible"/><path d="M21.962 8.249v7.806H9.145v9.04c17.75 2 16.634-7.455 31.384-.955z" style="marker:none" opacity=".5080214" color="@{base}" fill="url(#f)" fill-opacity="1" fill-rule="evenodd" stroke="none" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" marker-start="none" marker-mid="none" marker-end="none" stroke-miterlimit="10" stroke-dasharray="none" stroke-dashoffset="0" stroke-opacity="1" visibility="visible" display="inline" overflow="visible"/><path style="marker:none" d="M9.538 16.562v14.984h12.985v7.395l17.478-14.795-17.494-14.78v7.2z" opacity=".48128339" color="@{base}" fill="none" fill-opacity="1" fill-rule="evenodd" stroke="@{text}" stroke-width="1.00000036" stroke-linecap="butt" stroke-linejoin="miter" marker-start="none" marker-mid="none" marker-end="none" stroke-miterlimit="10" stroke-dasharray="none" stroke-dashoffset="0" stroke-opacity="1" visibility="visible" display="inline" overflow="visible"/></svg>'
+        );
+        content: url("data:image/svg+xml,@{svg}");
+        filter: none !important;
+			}
+
+      &[src$="Tango-go-prev.svg"] {
+				@svg: escape(
+          '<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="48" width="48" transform="scale(-1 1)"><defs><radialGradient gradientUnits="userSpaceOnUse" gradientTransform="matrix(2.04673 0 0 1.55761 -19.518 3.452)" r="17.171" fy="2.897" fx="19.701" cy="2.897" cx="19.701" id="f" xlink:href="#a"/><radialGradient gradientUnits="userSpaceOnUse" gradientTransform="matrix(1 0 0 .53672 0 16.873)" r="15.645" fy="36.421" fx="24.837" cy="36.421" cx="24.837" id="d" xlink:href="#b"/><radialGradient xlink:href="#c" id="e" cx="22.292" cy="32.798" fx="22.292" fy="32.798" r="16.956" gradientTransform="matrix(.84302 0 0 1.02017 4.5 1.382)" gradientUnits="userSpaceOnUse"/><linearGradient id="c"><stop offset="0" stop-color="@{teal}"/><stop offset="1" stop-color="@{green}"/></linearGradient><linearGradient id="b"><stop offset="0" stop-color="@{base}" stop-opacity="1"/><stop offset="1" stop-color="@{base}" stop-opacity="0"/></linearGradient><linearGradient id="a"><stop offset="0" stop-color="@{text}" stop-opacity="1"/><stop offset="1" stop-color="@{text}" stop-opacity="0"/></linearGradient></defs><path transform="translate(-8.12 -15.102)scale(1.27119)" d="M40.482 36.421a15.645 8.397 0 1 1-31.29 0 15.645 8.397 0 1 1 31.29 0" style="marker:none" opacity=".29946522" color="@{base}" fill="url(#d)" fill-opacity="1" fill-rule="evenodd" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" marker-start="none" marker-mid="none" marker-end="none" stroke-miterlimit="10" stroke-dasharray="none" stroke-dashoffset="0" stroke-opacity="1" visibility="visible" display="inline" overflow="visible"/><path d="M8.554 15.517v16.995h12.984v8.545l19.96-16.907L21.419 7.125v8.398z" style="marker:none" opacity="1" color="@{base}" fill="url(#e)" fill-opacity="1" fill-rule="evenodd" stroke="@{green}" stroke-width="1.00000036" stroke-linecap="round" stroke-linejoin="round" marker-start="none" marker-mid="none" marker-end="none" stroke-miterlimit="10" stroke-dasharray="none" stroke-dashoffset="0" stroke-opacity="1" visibility="visible" display="inline" overflow="visible"/><path d="M21.962 8.249v7.806H9.145v9.04c17.75 2 16.634-7.455 31.384-.955z" style="marker:none" opacity=".5080214" color="@{base}" fill="url(#f)" fill-opacity="1" fill-rule="evenodd" stroke="none" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" marker-start="none" marker-mid="none" marker-end="none" stroke-miterlimit="10" stroke-dasharray="none" stroke-dashoffset="0" stroke-opacity="1" visibility="visible" display="inline" overflow="visible"/><path style="marker:none" d="M9.538 16.562v14.984h12.985v7.395l17.478-14.795-17.494-14.78v7.2z" opacity=".48128339" color="@{base}" fill="none" fill-opacity="1" fill-rule="evenodd" stroke="@{text}" stroke-width="1.00000036" stroke-linecap="butt" stroke-linejoin="miter" marker-start="none" marker-mid="none" marker-end="none" stroke-miterlimit="10" stroke-dasharray="none" stroke-dashoffset="0" stroke-opacity="1" visibility="visible" display="inline" overflow="visible"/></svg>'
         );
         content: url("data:image/svg+xml,@{svg}");
         filter: none !important;
