fix(galileo): remove colon
Co-authored-by: uncenter <uncenter@uncenter.dev>

--- a/styles/galileo/catppuccin.user.less
+++ b/styles/galileo/catppuccin.user.less
@@ -49,7 +49,7 @@
       fill: @text !important;
     }
 
-    .navbar.top #navbarDropdown:, .nav-item:hover {
+    .navbar.top #navbarDropdown, .nav-item:hover {
       background: @text !important;
       color: @base !important;
       fill: @base !important;
