feat(galileo): change card header colors

--- a/styles/galileo/catppuccin.user.less
+++ b/styles/galileo/catppuccin.user.less
@@ -35,6 +35,12 @@
     #lib.palette();
     #lib.defaults();
 
+    .card-header {
+      background-color: @blue !important;
+      color: @text !important;
+      border-bottom: @sapphire !important;
+    }
+
     .navbar.top {
       background: @base !important;
     }
