fix(galileo): card header bottom border

--- a/styles/galileo/catppuccin.user.less
+++ b/styles/galileo/catppuccin.user.less
@@ -35,10 +35,10 @@
     #lib.palette();
     #lib.defaults();
 
-    .card-header {
+    .bento-card .card-header {
       background-color: @blue !important;
       color: @text !important;
-      border-bottom: @sapphire !important;
+      border-bottom: 8px solid @sapphire !important;
     }
 
     .navbar.top {
